Cleaning the project + Add a better README.md

--- a/FRONT/chat.html
+++ b/FRONT/chat.html
@@ -17,8 +17,8 @@
         </div>
         <!-- Champ d'entrée pour l'utilisateur -->
         <div id="chat-input">
-            <input type="text" id="user-input" placeholder="Tapez votre message ici...">
-            <button id="send_button">Envoyer</button>
+            <input type="text" id="user-input" placeholder="Type here...">
+            <button id="send_button">Send</button>
         </div>
     </div>
     <script src="script_chat.js" ></script>
