Changement d'organisation du FRONT, un dossier avec les styles css, un avec les scripts js. Ajout d'un bouton pour lancer le chatbot, une animation lorsque le chatbot apparait ainsi qu'un premier message par le bot pour le rendre plus attrayant

--- a/FRONT/chat.html
+++ b/FRONT/chat.html
@@ -5,15 +5,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Interface Chatbot test01</title>
-    <link rel="stylesheet" href="style_chat.css">
+    <link rel="stylesheet" href="CSS/style_chat.css">
+    <link rel="stylesheet" href="CSS/style_statbutton.css">
+
 </head>
 
 <body>
+    <!-- Bouton pour démarrer le chat -->
+    <button class="start-button" role="button" id="start-button">Chat with your virtual assistant</button>
     <!-- Conteneur principal du chat -->
     <div id="chat-container">
         <!-- Conteneur des messages -->
         <div id="chat-output">
             <!-- Les messages du bot et de l'utilisateur seront insérés ici -->
+             <div class="bot-message" id="first-message">Chat_V1 : How can I help you ?</div>
         </div>
         <!-- Champ d'entrée pour l'utilisateur -->
         <div id="chat-input">
@@ -21,7 +26,8 @@
             <button id="send_button">Send</button>
         </div>
     </div>
-    <script src="script_chat.js" ></script>
+    <script src="JS/script_chat.js"></script>
+    <script src="JS/script_startbutton.js"></script>
 </body>
 
 </html>
