Ajout d'un background animé

--- a/FRONT/chat.html
+++ b/FRONT/chat.html
@@ -11,6 +11,8 @@
 </head>
 
 <body>
+    <!-- iframe qui contient l'animation de l'avion -->
+    <iframe src="HTLM/background.html"></iframe>
     <!-- Bouton pour démarrer le chat -->
     <button class="start-button" role="button" id="start-button">Chat with your virtual assistant</button>
     <!-- Conteneur principal du chat -->
@@ -18,7 +20,7 @@
         <!-- Conteneur des messages -->
         <div id="chat-output">
             <!-- Les messages du bot et de l'utilisateur seront insérés ici -->
-             <div class="bot-message" id="first-message">Chat_V1 : How can I help you ?</div>
+            <div class="bot-message" id="first-message">Chat_V1 : How can I help you ?</div>
         </div>
         <!-- Champ d'entrée pour l'utilisateur -->
         <div id="chat-input">
@@ -26,8 +28,8 @@
             <button id="send_button">Send</button>
         </div>
     </div>
-    <script src="JS/script_chat.js"></script>
-    <script src="JS/script_startbutton.js"></script>
 </body>
+<script src="JS/script_chat.js"></script>
+<script src="JS/script_startbutton.js"></script>
 
 </html>
