Séparation des fichiers statiques et des API endpoints

--- a/FRONT/chat.html
+++ b/FRONT/chat.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Interface Chatbot test01</title>
-    <link rel="stylesheet" href="CSS/style_chat.css">
-    <link rel="stylesheet" href="CSS/style_statbutton.css">
+    <link rel="stylesheet" href="static/CSS/style_chat.css">
+    <link rel="stylesheet" href="static/CSS/style_statbutton.css">
 
 </head>
 
 <body>
     <!-- iframe qui contient l'animation de l'avion -->
-    <iframe src="HTLM/background.html"></iframe>
+    <iframe src="static/HTLM/background.html"></iframe>
     <!-- Bouton pour démarrer le chat -->
     <button class="start-button" role="button" id="start-button">Chat with your virtual assistant</button>
     <!-- Conteneur principal du chat -->
@@ -29,7 +29,7 @@
         </div>
     </div>
 </body>
-<script src="JS/script_chat.js"></script>
-<script src="JS/script_startbutton.js"></script>
+<script src="static/JS/script_chat.js"></script>
+<script src="static/JS/script_startbutton.js"></script>
 
 </html>
