--- a/FRONT/chat.html
+++ b/FRONT/chat.html
@@ -20,7 +20,7 @@
         <!-- Conteneur des messages -->
         <div id="chat-output">
             <!-- Les messages du bot et de l'utilisateur seront insérés ici -->
-            <div class="bot-message" id="first-message">Chat_V1 : How can I help you ?</div>
+            <div class="bot-message" id="first-message">Assistant : Hello, I am your personal assistant. Please provide me with your question.</div>
         </div>
         <!-- Champ d'entrée pour l'utilisateur -->
         <div id="chat-input">
