Ajout message vocal

--- a/FRONT/chat.html
+++ b/FRONT/chat.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="static/CSS/style_startbutton.css">
     <link rel="stylesheet" href="static/CSS/style_menu.css">
     <link rel="icon" href="/static/images/chatboticon.png" type="image/x-icon">
-
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
 </head>
 
 <body>
