petit changement css

--- a/FRONT/chat.html
+++ b/FRONT/chat.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ChatBotPFE</title>
+    <link rel="stylesheet" href="static/CSS/style_background.css">
     <link rel="stylesheet" href="static/CSS/style_chat.css">
     <link rel="stylesheet" href="static/CSS/style_startbutton.css">
     <link rel="stylesheet" href="static/CSS/style_menu.css">
